@@ -26,7 +26,6 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -43,7 +42,7 @@ import static org.mockito.Mockito.when;
 @MockitoSettings(strictness = Strictness.STRICT_STUBS)
 public class SharedTopicAdminTest {
 
-    private static final Map<String, Object> EMPTY_CONFIG = Collections.emptyMap();
+    private static final Map<String, Object> EMPTY_CONFIG = Map.of();
 
     @Mock private TopicAdmin mockTopicAdmin;
     @Mock private Function<Map<String, Object>, TopicAdmin> factory;
